Rework GoblintService lifecycle handling and config reloading. Refactor related code