@@ -17,6 +17,7 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.eclipse.lsp4j.MessageParams;
 import org.eclipse.lsp4j.MessageType;
+import org.thymeleaf.util.ListUtils;
 import org.zeroturnaround.exec.InvalidExitValueException;
 import org.zeroturnaround.exec.ProcessExecutor;
 import org.zeroturnaround.exec.ProcessResult;
@@ -51,21 +52,18 @@ public class GoblintAnalysis implements ServerAnalysis {
 
     private final MagpieServer magpieServer;
     private final GoblintServer goblintServer;
-    private final GoblintService goblintService;
     private final GobPieConfiguration gobpieConfiguration;
-    private final FileAlterationObserver goblintConfObserver;
-    private final int SIGINT = 2;
     private static Future<?> lastAnalysisTask;
+
+    private static final int SIGINT = 2;
 
     private final Logger log = LogManager.getLogger(GoblintAnalysis.class);
 
 
-    public GoblintAnalysis(MagpieServer magpieServer, GoblintServer goblintServer, GoblintService goblintService, GobPieConfiguration gobpieConfiguration) {
+    public GoblintAnalysis(MagpieServer magpieServer, GoblintServer goblintServer, GobPieConfiguration gobpieConfiguration) {
         this.magpieServer = magpieServer;
         this.goblintServer = goblintServer;
-        this.goblintService = goblintService;
         this.gobpieConfiguration = gobpieConfiguration;
-        this.goblintConfObserver = createGoblintConfObserver();
     }
 
 
@@ -91,19 +89,30 @@ public class GoblintAnalysis implements ServerAnalysis {
     @Override
     public void analyze(Collection<? extends Module> files, AnalysisConsumer consumer, boolean rerun) {
         if (consumer instanceof MagpieServer server) {
-            abortAnalysis();
-            goblintConfObserver.checkAndNotify();
+            // Abort analysis if running
+            if (lastAnalysisTask != null && !lastAnalysisTask.isDone()) {
+                lastAnalysisTask.cancel(true);
+                try {
+                    abortAnalysis();
+                    log.info("----------------- Analysis has been aborted ------------------");
+                } catch (IOException | IllegalStateException e) {
+                    log.error("Aborting analysis failed: " + e);
+                }
+            }
+
+            // Run pre-analyse command (note that if the command fails the analysis is still run)
             preAnalyse();
+
+            // Run analysis
             log.info("---------------------- Analysis started ----------------------");
-            lastAnalysisTask = reanalyse().thenAccept(response -> {
+            lastAnalysisTask = reanalyse(goblintServer.getGoblintService()).thenAccept(response -> {
                 server.consume(new ArrayList<>(response), source());
                 log.info("--------------------- Analysis finished ----------------------");
             }).exceptionally(ex -> {
                 // TODO: handle closed socket exceptions:
                 //      org.eclipse.lsp4j.jsonrpc.JsonRpcException: java.net.SocketException: Broken pipe; errno=32
                 //  and org.eclipse.lsp4j.jsonrpc.JsonRpcException: org.newsclub.net.unix.SocketClosedException: Not open
-                log.error("--------------------- Analysis failed  ----------------------");
-                log.error(ex.getMessage());
+                log.error("---------------------- Analysis failed -----------------------\n    " + ex.getMessage());
                 return null;
             });
         }
@@ -115,19 +124,11 @@ public class GoblintAnalysis implements ServerAnalysis {
      * aborts the previous running analysis by sending a SIGINT signal to Goblint.
      */
 
-    private void abortAnalysis() {
-        if (lastAnalysisTask != null && !lastAnalysisTask.isDone()) {
-            lastAnalysisTask.cancel(true);
-            Process goblintProcess = goblintServer.getGoblintRunProcess().getProcess();
-            int pid = Math.toIntExact(goblintProcess.pid());
-            UnixProcess unixProcess = new UnixProcess(pid);
-            try {
-                unixProcess.kill(SIGINT);
-                log.info("--------------- This analysis has been aborted -------------");
-            } catch (IOException e) {
-                log.error("Aborting analysis failed.");
-            }
-        }
+    private void abortAnalysis() throws IOException, IllegalStateException {
+        Process goblintProcess = goblintServer.getGoblintServerProcess();
+        int pid = Math.toIntExact(goblintProcess.pid());
+        UnixProcess unixProcess = new UnixProcess(pid);
+        unixProcess.kill(SIGINT);
     }
 
 
@@ -162,10 +163,9 @@ public class GoblintAnalysis implements ServerAnalysis {
      * @throws GobPieException in case the analysis was aborted or returned a VerifyError.
      */
 
-    private CompletableFuture<Collection<AnalysisResult>> reanalyse() {
+    private CompletableFuture<Collection<AnalysisResult>> reanalyse(GoblintService goblintService) {
         return goblintService.analyze(new Params())
-                .thenCompose(this::getComposedAnalysisResults)
-                .applyToEither(didGoblintCrash(), res -> res);
+                .thenCompose(res -> getComposedAnalysisResults(goblintService, res));
     }
 
     private void didAnalysisNotSucceed(GoblintAnalysisResult analysisResult) {
@@ -175,37 +175,21 @@ public class GoblintAnalysis implements ServerAnalysis {
             throw new GobPieException("Analysis returned VerifyError.", GobPieExceptionType.GOBLINT_EXCEPTION);
     }
 
-    private CompletableFuture<Collection<AnalysisResult>> didGoblintCrash() {
-        return CompletableFuture.supplyAsync(() -> {
-            try {
-                goblintServer.getGoblintRunProcess().getProcess().waitFor();
-            } catch (InterruptedException ignored) {
-            }
-            throw new GobPieException("Goblint has exited.", GobPieExceptionType.GOBLINT_EXCEPTION);
-        });
-    }
-
-    private CompletableFuture<Collection<AnalysisResult>> convertAndCombineResults(
-            CompletableFuture<List<GoblintMessagesResult>> messagesCompletableFuture,
-            CompletableFuture<List<GoblintFunctionsResult>> functionsCompletableFuture) {
-        return messagesCompletableFuture
-                .thenCombine(functionsCompletableFuture, (messages, functions) ->
-                        Stream.concat(
-                                convertMessagesFromJson(messages).stream(),
-                                convertFunctionsFromJson(functions).stream()
-                        ).collect(Collectors.toList()));
-    }
-
-    private CompletableFuture<Collection<AnalysisResult>> getComposedAnalysisResults(GoblintAnalysisResult analysisResult) {
+    private CompletableFuture<Collection<AnalysisResult>> getComposedAnalysisResults(GoblintService goblintService, GoblintAnalysisResult analysisResult) {
         didAnalysisNotSucceed(analysisResult);
+
         // Get warning messages
-        CompletableFuture<List<GoblintMessagesResult>> messagesCompletableFuture = goblintService.messages();
+        CompletableFuture<Collection<AnalysisResult>> messagesCompletableFuture = goblintService.messages()
+                .thenApply(this::convertMessagesFromJson);
         if (gobpieConfiguration.getshowCfg() == null || !gobpieConfiguration.getshowCfg()) {
-            return messagesCompletableFuture.thenApply(this::convertMessagesFromJson);
+            return messagesCompletableFuture;
         }
+
         // Get list of functions
-        CompletableFuture<List<GoblintFunctionsResult>> functionsCompletableFuture = goblintService.functions();
-        return convertAndCombineResults(messagesCompletableFuture, functionsCompletableFuture);
+        CompletableFuture<Collection<AnalysisResult>> functionsCompletableFuture = goblintService.functions()
+                .thenApply(this::convertFunctionsFromJson);
+        return messagesCompletableFuture.thenCombine(functionsCompletableFuture, (messages, functions) ->
+                Stream.concat(messages.stream(), functions.stream()).toList());
     }
 
 
@@ -218,11 +202,11 @@ public class GoblintAnalysis implements ServerAnalysis {
      */
 
     private Collection<AnalysisResult> convertMessagesFromJson(List<GoblintMessagesResult> response) {
-        return response.stream().map(GoblintMessagesResult::convert).flatMap(List::stream).collect(Collectors.toList());
+        return response.stream().map(GoblintMessagesResult::convert).flatMap(List::stream).toList();
     }
 
     private Collection<AnalysisResult> convertFunctionsFromJson(List<GoblintFunctionsResult> response) {
-        return response.stream().map(GoblintFunctionsResult::convert).collect(Collectors.toList());
+        return response.stream().map(GoblintFunctionsResult::convert).toList();
     }
 
 
@@ -234,7 +218,7 @@ public class GoblintAnalysis implements ServerAnalysis {
      * @return Exit value and output of a finished process.
      */
 
-    public ProcessResult runCommand(File dirPath, String[] command) throws IOException, InvalidExitValueException, InterruptedException, TimeoutException {
+    private ProcessResult runCommand(File dirPath, String[] command) throws IOException, InvalidExitValueException, InterruptedException, TimeoutException {
         log.debug("Waiting for command: " + Arrays.toString(command) + " to run...");
         return new ProcessExecutor()
                 .directory(dirPath)
@@ -243,43 +227,5 @@ public class GoblintAnalysis implements ServerAnalysis {
                 .redirectError(System.err)
                 .execute();
     }
-
-
-    /**
-     * Method for creating an observer for Goblint configuration file.
-     * So that a request to read in the configuration file would be sent to Goblint
-     * when the configuration file is changed.
-     *
-     * @return The FileAlterationObserver of the project's root directory.
-     */
-
-    public FileAlterationObserver createGoblintConfObserver() {
-        FileFilter fileFilter = file -> file.getName().equals(gobpieConfiguration.getGoblintConf());
-        FileAlterationObserver observer = new FileAlterationObserver(System.getProperty("user.dir"), fileFilter);
-        observer.addListener(new FileAlterationListenerAdaptor() {
-            @Override
-            public void onFileChange(File file) {
-                if (!goblintServer.getGoblintRunProcess().getProcess().isAlive()) {
-                    magpieServer.exit();
-                } else {
-                    goblintService.reset_config();
-                    goblintService.read_config(new Params(new File(goblintServer.getGoblintConf()).getAbsolutePath()))
-                            .whenComplete((res, ex) -> {
-                                String msg = "Goblint was unable to successfully read the new configuration. " + ex.getMessage();
-                                magpieServer.forwardMessageToClient(new MessageParams(MessageType.Warning, msg));
-                                log.error(msg);
-                            });
-                }
-            }
-        });
-
-        try {
-            observer.initialize();
-        } catch (Exception e) {
-            log.error("Initializing goblintConfObserver failed: " + e.getMessage());
-        }
-        return observer;
-    }
-
 
 }
